# match5x5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  game_desc.txt
match_game/: button.h  checkbox.h  common.h  dropdown.h  game.cpp  game.h  level_generator.h  main.cpp  sound.h  sprite.cpp  sprite.h
match_game/ui/: button.h  checkbox.h  dropdown.h  label.h  ui_scheme.h
res/: ui.skin
res/bgm/: BGMusic.txt  GeneralUserLicense.txt
res/sfx/: SoundEffects.txt
res/tiles/: images_copyright.txt
spinach/common/: spn_profiler.hpp  spn_utils.cpp  spn_utils.h
spinach/core/: spn_canvas.cpp  spn_canvas.h  spn_core.cpp  spn_core.h  spn_image.cpp  spn_image.h
